FullSb1-27-apr-15/src/objects/City__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Cities</relationshipLabel>
        <relationshipName>Cities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeonameID__c</fullName>
        <label>GeonameID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>City</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Latitude__c</columns>
        <columns>Longitude__c</columns>
        <columns>Population__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>